feat: update endpoints in the /actuator endpoint (*)
docs: add info about the app in the /actuator/info endpoint

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 spring.application.name=MyCoolApp
-management.endpoints.web.exposure.include=health,info
+management.endpoints.web.exposure.include=*
 management.info.env.enabled=true
+# for 'info' endpoint:
+info.app.name=My Cool App
+info.app.description=A simple REST API app (Spring Boot)
+info.app.version=1.0.0
