feat: add the Spring Boot Starter Security dependency to secure endpoints

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=MyCoolApp
 management.endpoints.web.exposure.include=*
+# management.endpoints.web.exposure.exclude=health,info
 management.info.env.enabled=true
 # for 'info' endpoint:
 info.app.name=My Cool App
