feat: implement the /author endpoint with defining custom properties in the application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,6 @@ management.info.env.enabled=true
 info.app.name=My Cool App
 info.app.description=A simple REST API app (Spring Boot)
 info.app.version=1.0.0
+# define custom properties:
+author.name=Amirhossein Emadi
+author.age=25
