refactor: update the configuration of app (server port and context path) in the application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,7 @@ info.app.version=1.0.0
 # define custom properties:
 author.name=Amirhossein Emadi
 author.age=25
+# change Spring Boot embedded server port ('7070'):
+server.port=7070
+# set the context path ('/api'):
+server.servlet.context-path=/api
